style: Fixed dark mode colors in docs

--- a/src/app/(docs)/globals.css
+++ b/src/app/(docs)/globals.css
@@ -3,45 +3,40 @@
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --background: 221 50% 11%;
-    --foreground: 240 66.67% 94.12%;
-
+  .dark {
+    --background: 222 47% 11%;
+    --accent: 215 25% 27%;
     --card: 217 33% 17%;
-    --card-foreground: 240 100% 97.06%;
-
-    --popover: 217 33% 17%;
-    --popover-foreground: 240 66.67% 94.12%;
-
-    --primary: 258 71% 61%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 235 31.49% 35.49%;
-    --secondary-foreground: 240 34.78% 90.98%;
-
-    --muted: 240 27.59% 22.75%;
-    --muted-foreground: 215 20% 65%;
-
-    --accent: 0 0% 80%;
-    --accent-foreground: 240 42.86% 8.24%;
-
-    --destructive: 0 73.46% 41.37%;
-    --destructive-foreground: 0 0% 100%;
-
     --border: 215 25% 27%;
-    --input: 215 25% 27%;
-    --ring: 291 63.72% 42.16%;
-
-    --sidebar-background: 217 33% 17%;
-    --sidebar-foreground: 240 100% 90.78%;
-    --sidebar-primary: 262 51.87% 47.25%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 24.49% 38.43%;
-    --sidebar-accent-foreground: 0 0% 87.84%;
-    --sidebar-border: 240 24.49% 38.43%;
-    --sidebar-ring: 291 63.72% 42.16%;
 
     --radius: 0.75rem;
+  }
+
+  .light {
+    --background: 0 0% 100%;
+    --foreground: 240 10% 3.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 240 5.9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 10% 3.9%;
+    --chart-1: 173 58% 39%;
+    --chart-2: 12 76% 61%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
 }
 
